Fixed width issue on Firefox

--- a/shambomon/assets/css/app.scss
+++ b/shambomon/assets/css/app.scss
@@ -286,6 +286,7 @@ h1 {
 /* Adds some padding between the battlefield and the header */
 #battlefield {
   padding-top: 20px;
+  width: 100%;
 }
 /*************************** END OF BATTLEFIELD **************************/
 
